--- a/assets/css/appResume/basic/templates/style.scss
+++ b/assets/css/appResume/basic/templates/style.scss
@@ -7,3 +7,5 @@
 @import 'template5/style';
 @import 'template6/style';
 @import 'template7/style';
+@import 'template8/style';
+@import 'template9/style';
