--- a/assets/templates/appResume/basic/section.html
+++ b/assets/templates/appResume/basic/section.html
@@ -29,11 +29,11 @@
         $.loader = $.tags["oscreen-loader"];
     });
 
-    $.on("mount", function(){
-        $afterlag.run(function(){
-            $.show();
-        });
-    });
+    // $.on("mount", function(){
+    //     $afterlag.run(function(){
+    //         $.show();
+    //     });
+    // });
 
     $.show = function(){
         if ($.loading || $.active) return;
