--- a/assets/templates/appResume/basic/templates/template5.html
+++ b/assets/templates/appResume/basic/templates/template5.html
@@ -3,23 +3,28 @@
 	<div id="t-header">
 		<div id="t-header-names">
 			<div if={ $resume.get('commons', 'name').length > $resume.get('commons', 'surname').length }>
-				<div id="t-header-surname" class="t-header-name bold">{ $resume.get('commons', 'surname') }</div>
+				<div if={ $resume.get('commons', 'surname') } id="t-header-surname" class="t-header-name bold">{ $resume.get('commons', 'surname') }</div>
 				<div id="t-header-name" class="t-header-name">{ $resume.get('commons', 'name') }</div>
 			</div>
 			<div if={ $resume.get('commons', 'surname').length > $resume.get('commons', 'name').length }>
 				<div id="t-header-name" class="t-header-name bold">{ $resume.get('commons', 'name') }</div>
-				<div id="t-header-surname" class="t-header-name">{ $resume.get('commons', 'surname') }</div>
+				<div if={ $resume.get('commons', 'surname') } id="t-header-surname" class="t-header-name">{ $resume.get('commons', 'surname') }</div>
 			</div>
 		</div>
 		<div id="t-header-string">
 			<div class="t-header-string-left">
-				<div if={ $resume.get('salary', 'active') && $resume.get('salary', 'amount') } class="t-header-string-element t-header-string-salary">{ $resume.take.salary.amount() } { $resume.take.salary.currency() } <sup>{ $resume.take.salary.worktime() }</sup></div>
-				<div class="t-header-string-element"><span>Возраст:</span> <virtual if={ !$resume.get('commons', 'birthday', 'hidden') }>{ $resume.take.birthday.date() }&nbsp;</virtual>({ $resume.take.birthday.age() })</div>
-				<div if={ $resume.get('commons', 'contacts', 'city') } class="t-header-string-element"><span>Город:</span> { $resume.get('commons', 'contacts', 'city') }</div>
+				<div if={ $resume.get('salary', 'active') && $resume.get('salary', 'amount') } class="t-header-string-element t-header-string-salary">
+					{ $resume.take.salary.amount() }
+					<rub if={ $resume.get('salary', 'currency') == "1" }></rub>
+					<valuta if={ $resume.get('salary', 'currency') != "1" }>{ $resume.take.salary.currency() }</valuta>
+					<sup>{ $resume.take.salary.worktime() }</sup>
+				</div>
+				<div class="t-header-string-element"><span>{ $i18n("resume.basic.template.Age") }:</span> <virtual if={ !$resume.get('commons', 'birthday', 'hidden') }>{ $resume.take.birthday.date() }&nbsp;</virtual>({ $resume.take.birthday.age() })</div>
+				<div if={ $resume.get('commons', 'contacts', 'city') } class="t-header-string-element"><span>{ $i18n("resume.basic.template.City") }:</span> { $resume.get('commons', 'contacts', 'city') }</div>
 				<div if={ $resume.get('commons', 'contacts', 'skype') } class="t-header-string-element"><span>Skype:</span> { $resume.get('commons', 'contacts', 'skype') }</div>
 			</div>
 			<div class="t-header-string-right">
-				<div if={ $resume.get('commons', 'contacts', 'phone') } class="t-header-string-element"><span>Телефон:</span> { $resume.get('commons', 'contacts', 'phone') }</div>
+				<div if={ $resume.get('commons', 'contacts', 'phone') } class="t-header-string-element"><span>{ $i18n("resume.basic.template.Phone") }:</span> { $resume.get('commons', 'contacts', 'phone') }</div>
 				<div if={ $resume.get('commons', 'contacts', 'email') } class="t-header-string-element"><span>Email:</span> { $resume.get('commons', 'contacts', 'email') }</div>
 			</div>
 		</div>
@@ -27,13 +32,13 @@
 	</div>
 	<div id="t-container-wrapper">
 		<div if={ $resume.get('education', 'items').length } class="t-container t-container-edu">
-			<div class="t-container-name">Образование</div>
+			<div class="t-container-name">{ $i18n("resume.basic.template.Education") }</div>
 			<virtual each={ edu, i in $resume.take.education.items() }>
 				<div if={ edu.level != 8 } class="t-container-item">
 					<div class="t-container-title"><span>{ edu.faculty }</span> &nbsp; { edu.year }, { $store.education.getTitleById(edu.level) }</div>
 					<div class="t-container-desc">
 						<div class="t-container-desc-title">{ edu.title }</div>
-						<div if={ edu.speciality } class="t-container-desc-title speciality"><span>Специальность</span> &ndash; { edu.speciality }</div>
+						<div if={ edu.speciality } class="t-container-desc-title speciality"><span>{ $i18n("resume.basic.template.Specialty") }</span> &ndash; { edu.speciality }</div>
 					</div>
 				</div>
 				<div if={ edu.level == 8 } class="t-container-item">
@@ -42,7 +47,7 @@
 			</virtual>
 		</div>
 		<div class="t-container t-container-lang">
-			<div class="t-container-name">Языки</div>
+			<div class="t-container-name">{ $i18n("resume.basic.template.Languages") }</div>
 			<div each={ lang, i in $resume.get('languages', 'items') } class="t-container-item">
 				<div if={ lang.title == "native" } class="t-container-title">
 					<span>{ $store.languages.getTitleById(lang.title) }</span>
@@ -55,12 +60,12 @@
 			</div>
 		</div>
 		<div if={ $resume.get('jobs', 'items').length } class="t-container t-container-job">
-			<div class="t-container-name">Место работы</div>
+			<div class="t-container-name">{ $i18n("resume.basic.template.Experience") }</div>
 			<div each={ job, i in $resume.take.jobs.items() } class="t-container-item">
 				<div class="t-container-year">
 					<div class="t-container-job-cell t-container-job-cell-left">
 						{ $store.month.getTitleById(job.from.month) } { job.from.year } —
-						<span if={ job.last }>по настоящее время</span>
+						<span if={ job.last }>{ $i18n("resume.basic.template.Until Now") }</span>
 						<span if={ !job.last }>{ $store.month.getTitleById(job.to.month) } { job.to.year }</span>
 					</div>
 					<div class="t-container-job-cell t-container-job-cell-line">
@@ -80,7 +85,7 @@
 			</div>
 		</div>
 		<div if={ $resume.get('about').length } class="t-container t-container-about">
-			<div class="t-container-name">Достижения, о себе</div>
+			<div class="t-container-name">{ $i18n("resume.basic.template.About me") }</div>
 			<div class="t-container-item">
 				<div class="t-container-desc">
 					<div class="t-container-desc-text preline">
