--- a/assets/css/modules/_tutorial.scss
+++ b/assets/css/modules/_tutorial.scss
@@ -19,7 +19,7 @@
         }
     }
     &__shape {
-        @include accelerate(true);
+        @include accelerate();
         @extend .pos-abs;
         box-sizing:content-box;
         border:10000px solid rgba(#fcfcfc,.8);
@@ -29,7 +29,7 @@
         height:0;
         will-change:transform, height, box-shadow, border-radius;
         transition:transform .6s ease .3s, height .6s ease .3s, box-shadow .6s ease .3s, border-radius .3s ease;
-        border-radius:50%;
+        // border-radius:50%;
     }
     &__message {
         @include accelerate(true);
@@ -44,7 +44,7 @@
         @extend .opacity-0;
         @extend .pointerEvents-all;
         box-shadow:0 20px 25px rgba(31,35,37,.15);
-        @extend .willChange-opacity;
+        will-change:opacity;
         transition:opacity .3s ease;
         width:440px;
 
@@ -79,12 +79,29 @@
         }
         &__title {
             @extend .c-blue;
+            @extend .fontSize-28;
+            @extend .fontWeight-bold;
             @extend .mb-s;
         }
         &__text {
-            @extend .fontSize-20;
+            @extend .fontSize-18;
             @extend .lineHeight-l;
-            @extend .mb-m;
+            @extend .mb-l;
+            @extend .whiteSpace-preLine;
+        }
+    }
+    &[data-animate="false"]{
+        .tutorial {
+            &__shape {
+                transition:transform .0s ease .3s, height .0s ease .3s, box-shadow .0s ease .3s, border-radius .0s ease .3s;
+            }
+            &__message {
+                transition:opacity .2s ease;
+
+                &[data-active="true"]{
+                    transition:opacity .4s ease 0.3s;
+                }
+            }
         }
     }
 }
