--- a/assets/templates/appResume/basic/templates/template6.html
+++ b/assets/templates/appResume/basic/templates/template6.html
@@ -8,18 +8,21 @@
 			{ $resume.get('post') }
 		</div>
 		<div if={ $resume.get('salary', 'active') && $resume.get('salary', 'amount') } id="t-header-salary">
-			{ $resume.take.salary.amount() } { $resume.take.salary.currency() } <sup class="t-header-salary-currency">{ $resume.take.salary.worktime() }</sup>
+			{ $resume.take.salary.amount() }
+			<rub if={ $resume.get('salary', 'currency') == "1" }></rub>
+			<valuta if={ $resume.get('salary', 'currency') != "1" }>{ $resume.take.salary.currency() }</valuta>
+			<sup class="t-header-salary-currency">{ $resume.take.salary.worktime() }</sup>
 		</div>
 	</div>
 	<div id="t-container-wrapper">
 		<div class="t-container-string t-container-table">
 			<div class="t-container-string-left">
 				<div class="t-container-string-element">
-					<span class="cell cell-name">Возраст:</span>
+					<span class="cell cell-name">{ $i18n("resume.basic.template.Age") }:</span>
 					<span class="cell"><virtual if={ !$resume.get('commons', 'birthday', 'hidden') }>{ $resume.take.birthday.date() }&nbsp;</virtual>({ $resume.take.birthday.age() })</span>
 				</div>
 				<div if={ $resume.get('commons', 'contacts', 'city') } class="t-container-string-element">
-					<span class="cell cell-name">Город:</span>
+					<span class="cell cell-name">{ $i18n("resume.basic.template.City") }:</span>
 					<span class="cell">{ $resume.get('commons', 'contacts', 'city') }</span>
 				</div>
 			</div>
@@ -29,7 +32,7 @@
 					<span class="cell cell-email">{ $resume.get('commons', 'contacts', 'email') }</span>
 				</div>
 				<div if={ $resume.get('commons', 'contacts', 'phone') } class="t-container-string-element">
-					<span class="cell cell-name">Телефон:</span>
+					<span class="cell cell-name">{ $i18n("resume.basic.template.Phone") }:</span>
 					<span class="cell">{ $resume.get('commons', 'contacts', 'phone') }</span>
 				</div>
 				<div if={ $resume.get('commons', 'contacts', 'skype') } class="t-container-string-element">
@@ -41,21 +44,21 @@
 		<div if={ $resume.get('education', 'items').length } class="t-container-string t-container-string-edu">
 			<virtual each={ edu, i in $resume.take.education.items() }>
 				<div if={ edu.level != 8 } class="t-container-string-element">
-					<span class="cell cell-name">{ 'Образование' : i == 0 }</span>
+					<span class="cell cell-name">{ i == 0 ? $i18n("resume.basic.template.Education") : '' }</span>
 					<span class="cell cell-text">
 						<strong>{ edu.year }, { $store.education.getTitleById(edu.level) }</strong>
 						<div>{ edu.title }</div>
 						<div><strong>{ edu.faculty }</strong></div>
-						<div if={ edu.speciality } class="speciality"><strong>Специальность</strong> &ndash; { edu.speciality }</div>
+						<div if={ edu.speciality } class="speciality"><strong>{ $i18n("resume.basic.template.Specialty") }</strong> &ndash; { edu.speciality }</div>
 					</span>
 				</div>
 				<div if={ edu.level == 8 } class="t-container-string-element">
-					<span class="cell cell-name">{ 'Образование' : i == 0 }</span>
+					<span class="cell cell-name">{ i == 0 ? $i18n("resume.basic.template.Education") : '' }</span>
 					<span class="cell cell-text">
 						<strong>{ edu.year }, { $store.education.getTitleById(edu.level) }</strong>
 						<div>{ edu.title }</div>
 						<div>{ edu.faculty }</div>
-						<div if={ edu.speciality } class="speciality"><strong>Специальность</strong> &ndash; { edu.speciality }</div>
+						<div if={ edu.speciality } class="speciality"><strong>{ $i18n("resume.basic.template.Specialty") }</strong> &ndash; { edu.speciality }</div>
 					</span>
 				</div>
 			</virtual>
@@ -63,7 +66,7 @@
 		<div class="t-container-string t-container-string-lang">
 			<virtual each={ lang, i in $resume.get('languages', 'items') }>
 				<div if={ lang.title == "native" } class="t-container-string-element mt-10">
-					<span class="cell cell-name">Языки</span>
+					<span class="cell cell-name">{ $i18n("resume.basic.template.Languages") }</span>
 					<span class="cell">
 						<div><strong class="t-container-string-lang-title">{ $store.languages.getTitleById(lang.title) }</strong>&nbsp; &nbsp; { $store.languages.native.getTitleById(lang.value) }</div>
 					</span>
@@ -78,7 +81,7 @@
 		</div>
 		<div if={ $resume.get('jobs', 'items').length } class="t-container-string t-container-string-job">
 			<div each={ job, i in $resume.take.jobs.items() } class="t-container-string-element { 'mt-10' : i != 1 }">
-				<span class="cell cell-name">{ 'Место работы' : i == 0 }</span>
+				<span class="cell cell-name">{ i == 0 ? $i18n("resume.basic.template.Experience") : ''  }</span>
 				<span class="cell cell-text">
 					<div><strong>{ job.company }</strong></div>
 					<div>{ job.city }</div>
@@ -90,7 +93,7 @@
 		</div>
 		<div if={ $resume.get('about').length } class="t-container-string t-container-string-about">
 			<div class="t-container-string-element">
-				<span class="cell cell-name">О себе</span>
+				<span class="cell cell-name">{ $i18n("resume.basic.template.About me") }</span>
 				<span class="cell cell-text preline">{ $resume.get('about') }</span>
 			</div>
 		</div>
