--- a/assets/templates/modules/tutorial.html
+++ b/assets/templates/modules/tutorial.html
@@ -1,20 +1,21 @@
-<section-tutorial class="tutorial" data-open="{ active }" active-zone="{ step.activeZone }">
+<section-tutorial class="tutorial" data-open="{ active }" data-animate={ false : app.device.isMobile || animate === false } active-zone="{ step.activeZone }">
 
     <div class="tutorial__shape" name="shape" style="{ step.style }"></div>
 
-    <div class="tutorial__message__wrapper" style="{ message.style }">
-        <div class="tutorial__message" data-position="{ message.position }" data-active={ message.active }>
-            <p class="pos-tr p-m p-gray fontSize-18">{ num } из { steps.get().length }</p>
-            <h3 class="tutorial__message__title">{ step.title }</h3>
-            <p class="tutorial__message__text">{ step.text }</p>
+    <div name="msgBox" class="tutorial__message__wrapper" style="{ message.style }">
+        <div name="msgElem" class="tutorial__message" data-position="{ message.position }" data-active="false">
+            <p class="pos-tr p-m c-grayLight fontSize-m">Шаг { num } из { steps.get().length }</p>
+            <div class="tutorial__message__title">{ message.title }</div>
+            <p class="tutorial__message__text">{ message.text }</p>
             <div class="fontSize-0">
-                <button onClick={ nextStep } class="btn btn-m { endShow ? 'btn-success' : 'btn-default-hover-success' } mr-xs">
+                <button onClick={ nextStep } onUpdate="none" class="btn btn-m { endShow ? 'btn-success' : 'btn-default-hover-success' } mr-xs">
                     <svg if={ endShow } class="btn-svg btn-svg-repeat" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                         <path class="fill-white" d="M 39.78125 5.96875 A 2.0002 2.0002 0 0 0 38 8 L 38 12.5625 C 34.722701 9.1373523 30.10346 7 25 7 C 15.082241 7 7 15.082241 7 25 A 2.0002 2.0002 0 1 0 11 25 C 11 17.243759 17.243759 11 25 11 C 28.816123 11 32.256876 12.535728 34.78125 15 L 31 15 A 2.0002 2.0002 0 1 0 31 19 L 40 19 L 42 19 L 42 17 L 42 8 A 2.0002 2.0002 0 0 0 39.96875 5.96875 A 2.0002 2.0002 0 0 0 39.78125 5.96875 z M 40.78125 22.96875 A 2.0002 2.0002 0 0 0 39 25 C 39 32.757363 32.756392 39 25 39 C 21.184399 39 17.742551 37.46305 15.21875 35 L 19 35 A 2.0002 2.0002 0 1 0 19 31 L 10 31 L 8 31 L 8 33 L 8 42 A 2.0002 2.0002 0 1 0 12 42 L 12 37.4375 C 15.276425 40.860887 19.895994 43 25 43 C 34.917608 43 43 34.918637 43 25 A 2.0002 2.0002 0 0 0 40.96875 22.96875 A 2.0002 2.0002 0 0 0 40.78125 22.96875 z"></path>
                     </svg>
                     { endShow ? 'Повторить' : 'Далее' }
                 </button>
-                <button onClick={ hide } class="btn btn-m btn-primary-hover">Выйти</button>
+                <!-- <button onClick={ hide } class="btn btn-m btn-primary-hover">{ endShow ? 'Перейти к выбору' : 'Закрыть помощник' }</button> -->
+                <button onClick={ hide } class="btn btn-m btn-primary-hover">Закрыть помощник</button>
             </div>
         </div>
     </div>
@@ -24,23 +25,60 @@
     var $ = this;
 
     $.active = false;
+    $.ready = false;
     $.steps = new Baobab([]).root;
-    $.borderColor = "#0084ff";
+    $.borderColor = "#265cdc";
 
     $.on("before-mount", function(){
         $.reset();
     });
 
+    $.on("messageShow", function(){
+        if ($.message.active) return;
+
+        $.message.active = true;
+
+        _.onEndTransition($["shape"], function(){
+
+            $.cordsMsg();
+
+            $.update();
+
+            $.msgElem.setAttribute("data-active", true);
+
+            _.onEndTransition($.msgElem, function(){
+                $.ready = true;
+            });
+        });
+    });
+
+    $.on("messageHide", function(){
+        $.message.active = false;
+
+        $.msgElem.setAttribute("data-active", false);
+
+        _.onEndTransition($.msgElem, function(){
+            $.message.position = $.step.position;
+            $.message.title = $.step.title;
+            $.message.text = $.step.text;
+            $.update();
+        });
+    });
+
     $.reset = function(){
+        $.start = false;
         $.scope = null;
+        $.animate = true;
         $.message = {
             active: false,
             style: "clear:both",
-            position: null
+            position: null,
+            title: null,
+            text: null
         };
         $.cursor = null;
         $.target = null;
-        $.num = 1;
+        $.num = 0;
         $.step = {
             activeZone: false,
             style: "clear:both"
@@ -48,13 +86,21 @@
         $.endShow = false;
     };
 
-    $.show = function(scope, tutorial){
+    $.show = function(scope, tutorial, options){
         if (app.plugins.tutorial[tutorial]){
+
+            $.start = true;
 
             $.steps.set(app.plugins.tutorial[tutorial]);
             $.scope = $$(scope);
 
+            if (options && options.animate !== undefined){
+                $.animate = options.animate;
+            }
+
             $.active = true;
+
+            $.trigger("messageHide");
 
             $.nextStep();
 
@@ -63,6 +109,8 @@
             app.$dom.window.on("resize.tutorial", function(){
                 reRender();
             });
+
+            $.navigate.init();
         }
         else {
             console.log("Not found tutorial: " + tutorial);
@@ -70,55 +118,86 @@
     };
 
     $.nextStep = function(){
-        if (!$.cursor) $.message.active = true;
-        else $.message.active = false;
+        $.changeStep("right");
+    };
 
-        if (!$.cursor || !$.cursor.right()) {
+    $.prevStep = function(){
+        if ($.num > 1){
+            $.changeStep("left");
+        }
+    };
+
+    $.changeStep = function(arrow){
+        $.ready = false;
+
+        if (!$.cursor) $.trigger("messageShow");
+        else $.trigger("messageHide");
+
+        if ($.endShow && $.step.actions){
+            if ($.step.actions.toggle){
+                $.step.actions.toggle($.target);
+            }
+        }
+        if (!$.cursor || !$.cursor[arrow]()) {
             $.cursor = $.steps.down();
         }
         else {
             $.actions($.step, $.target, true);
-            $.cursor = $.cursor.right();
+            $.cursor = $.cursor[arrow]();
         }
 
         $.step = $.cursor.get().call();
         $.target = $.scope.find($.step.target);
 
+        if ($.start){
+            $.message.position = $.step.position;
+            $.message.title = $.step.title;
+            $.message.text = $.step.text;
+        }
+
         $.render();
 
-        _.onEndTransition($["shape"], function(){
-            setTimeout(function(){
+        $.afterlag(function(){
 
-                $.message.position = $.step.position;
-                $.message.active = true;
+            $.trigger("messageShow");
 
-                if (!$.cursor.right()) $.endShow = true;
-                else $.endShow = false;
+            if (!$.cursor[arrow]() && arrow == "right") $.endShow = true;
+            else $.endShow = false;
 
-                $.update();
+            $.update();
 
-                if ($.endShow) $.num = 1;
-                else $.num++;
+            if ($.start || $.steps.get().length == $.num && arrow == "right") $.num = 1;
+            else {
+                if (arrow == "right") $.num++;
+                if (arrow == "left") $.num--;
+                // console.log(arrow, $.num);
+            }
 
-                $.actions($.step, $.target);
+            $.actions($.step, $.target);
 
-            }, 5);
+            $.start = false;
+
         });
     };
 
     $.render = function(){
-        var offset = $.target.offset(),
-            _width = $.target.data("width"),
-            _height = $.target.data("height"),
-            _zoom = $.target.data("zoom"),
-            padding = $.target.data("padding"),
+        $.offset = $.target.offset();
+
+        if ($.step.offset){
+            $.offset.top += $.step.offset.top ? $.step.offset.top : 0;
+            $.offset.left += $.step.offset.left ? $.step.offset.left : 0;
+        }
+        var _width = $.target.data("width") || $.step.width,
+            _height = $.target.data("height") || $.step.height,
+            _zoom = $.target.data("zoom") || $.step.zoom,
+            padding = $.target.data("padding") || $.step.padding,
             width = _width ? parseInt(_width) : (padding ? $.target.outerWidth() + parseInt(padding) * 2 : $.target.outerWidth()),
             height = _height ? parseInt(_height) : (padding ? $.target.outerHeight() + parseInt(padding) * 2 : $.target.outerHeight()),
             zoom = _zoom ? parseFloat(_zoom) : 1,
             arbitrarySize = 300,
             halfSize = arbitrarySize / 2,
-            centerX = (padding ? offset.left - parseInt(padding) : offset.left) + width / 2,
-            centerY = (padding ? offset.top - parseInt(padding) : offset.top) + height / 2,
+            centerX = (padding ? $.offset.left - parseInt(padding) : $.offset.left) + width / 2,
+            centerY = (padding ? $.offset.top - parseInt(padding) : $.offset.top) + height / 2,
             centerXMinusHalfSize = centerX - halfSize,
             centerYMinusHalfSize = centerY - halfSize,
             rectangleScaleFactor = (width / arbitrarySize) * zoom,
@@ -126,6 +205,7 @@
             borderSize = Math.ceil(5 / rectangleScaleFactor),
             shadowSize = 5 * borderSize,
             rectangleBorderRadius = 1e4 + 20 / rectangleScaleFactor,
+            circleBorderRadius = rectangleBorderRadius * 1.008,
             style = null;
 
         if ($.step.figure == "square"){
@@ -139,33 +219,57 @@
                 borderSize = Math.ceil(5 / scaleFactor),
                 shadowSize = 5 * borderSize;
 
-            style = "-webkit-transform: translateX(" + centerXMinusHalfSize + "px) translateY(" + centerYMinusHalfSize + "px) translateZ(0) scale(" + scaleFactor + "); transform: translateX(" + centerXMinusHalfSize + "px) translateY(" + centerYMinusHalfSize + "px) translateZ(0) scale(" + scaleFactor + "); width: " + arbitrarySize + "px; height: " + arbitrarySize + "px; box-shadow: inset 0 0 0 " + borderSize + "px " + $.borderColor + ", inset 0 0 " + shadowSize + "px rgba(0,0,0,0.4)";
+            style = "-webkit-transform: translateX(" + centerXMinusHalfSize + "px) translateY(" + centerYMinusHalfSize + "px) translateZ(0) scale(" + scaleFactor + "); transform: translateX(" + centerXMinusHalfSize + "px) translateY(" + centerYMinusHalfSize + "px) translateZ(0) scale(" + scaleFactor + "); width: " + arbitrarySize + "px; height: " + arbitrarySize + "px; box-shadow: inset 0 0 0 " + borderSize + "px " + $.borderColor + ", inset 0 0 " + shadowSize + "px rgba(0,0,0,0.4); border-radius: " + circleBorderRadius + "px";
         }
 
         $.step.style = style;
+        $.targetWidth = width;
+        $.targetHeight = height;
+    };
 
-        if (!$.message.active) $.update();
+    $.cordsMsg = function(){
+        var offsetY = $.offset.top;
+
+        if (offsetY + $.msgBox.scrollHeight > app.sizes.height - 40){
+            offsetY = $.offset.top + (app.sizes.height - 40) - (offsetY + $.msgBox.scrollHeight);
+        }
+        if (offsetY < 40) offsetY = 40;
 
         if ($.step.position == "right"){
-            $.message.style = "top:" + offset.top + "px; left:" + (offset.left + width) + "px";
+            $.message.style = "top:" + offsetY + "px; left:" + ($.offset.left + $.targetWidth) + "px";
         }
         else if ($.step.position == "left" || $.step.position == "up"){
-            $.message.style = "top:" + offset.top + "px; left:" + offset.left + "px";
+            $.message.style = "top:" + offsetY + "px; left:" + $.offset.left + "px";
         }
         else if ($.step.position == "down"){
-            $.message.style = "top:" + (offset.top + height) + "px; left:" + offset.left + "px";
+            $.message.style = "top:" + ($.offset.top + $.targetHeight) + "px; left:" + $.offset.left + "px";
         }
-
-        if ($.message.active) $.update();
     };
 
     $.actions = function(step, $target, force){
         if (step.actions){
             if (step.actions.toggle){
-                setTimeout(function(){
+                $.afterlag(function(){
                     step.actions.toggle($target);
-                }, force ? 0 : 650);
+                }, {
+                    delay: force ? 0 : 650,
+                    iterations: force ? 0 : 5,
+                });
             }
+        }
+    };
+
+    $.navigate = {
+        init: function(){
+            app.$dom.document.on("keydown.tutorial", function(e){
+                if ($.ready){
+                    if (e.which == KEY.RIGHT && !$.endShow) $.nextStep();
+                    else if (e.which == KEY.LEFT) $.prevStep();
+                }
+            });
+        },
+        destroy: function(){
+            app.$dom.document.off("keydown.tutorial");
         }
     };
 
@@ -173,12 +277,29 @@
         $.active = false;
 
         _.onEndTransition($.root, function(){
-            $.actions($.step, $.target, true);
             $.reset();
             $.update();
         });
+        $.afterlag(function(){
+            $.actions($.step, $.target, true);
+        });
+
+        $.navigate.destroy();
 
         app.$dom.window.off("resize.tutorial");
+    };
+
+    $.afterlag = function(callback, options){
+        var opt = {
+            delay: 0,
+            iterations: 1
+        };
+
+        if (options) _.extend(opt, options);
+
+        var afterlag = new Afterlag(opt);
+
+        afterlag.run(callback);
     };
 
 </script>
